# Build-a-LLM-model-from-scratch

./: CITATION.cff  LICENSE  README.md  llm_pipeline.py  pyproject.toml  requirements.txt
notebooks/: README.md
src/llm_lab/: cli.py  data.py
tests/: test_imports.py
